--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,4 @@
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
 
-/Project/.vs/Project/FileContentIndex
+/Project/.vs/
